--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@leaf-x/we-chat-pay",
-  "version": "0.5.0",
-  "main": "./dist/index.js",
+  "version": "1.0.0",
+  "main": "./dist/src/index.js",
   "author": "sound shell <sound_shell@outlook.com>",
   "description": "WeChat payment V3.0.0 API.",
   "license": "MIT",
@@ -15,22 +15,19 @@
   },
   "dependencies": {
     "@fidm/x509": "^1.2.1",
-    "@leaf-x/fetch": "^0.6.2",
+    "@leaf-x/fetch": "^1.0.0",
     "camelcase-keys": "^6.2.2",
     "snakecase-keys": "^3.2.1"
   },
   "devDependencies": {
     "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.43",
+    "@types/node": "^14.14.10",
     "@types/power-assert": "^1.5.3",
     "@types/sinon": "^9.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-typescript": "^0.14.0",
+    "eslint": "^7.14.0",
     "espower-typescript": "^9.0.2",
     "global": "^4.4.0",
+    "gts": "^3.1.0",
     "mocha": "^8.2.1",
     "moment": "^2.29.1",
     "nyc": "^15.0.1",
@@ -52,13 +49,19 @@
     "cache": false
   },
   "files": [
-    "dist/src",
-    "dist/index.js",
-    "dist/*.d.ts"
+    "dist/src"
   ],
   "scripts": {
-    "build": "tsc",
-    "lint": "eslint . --ext .ts",
-    "test": "nyc mocha --require espower-typescript/guess test/*.test.ts test/**/*.test.ts"
+    "lint": "gts lint",
+    "test": "nyc mocha --require espower-typescript/guess test/*.test.ts test/**/*.test.ts",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
+  },
+  "engines": {
+    "node": ">=11.0.0"
   }
 }
